# cuddly-bassoon

./: gamebooksolver.cabal
app/: SolveBook02.hs
app/LoneWolf/: Book02.hs
src/: Book02.hs  LoneWolf.hs  Main.hs  SolveBook02.hs  Solver.hs
src/LoneWolf/: Chapter.hs  Character.hs  Choices.hs  Combat.hs  Rules.hs  Solve.hs
unordered-containers-0.9.10/: unordered-containers.cabal
